--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x, 20.x]  # Actualizado para incluir Node.js 20.x
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3  # Actualizado a v3
 
     - name: Configurar Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3  # Actualizado a v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -36,7 +36,7 @@ jobs:
       run: npm run test:coverage
 
     - name: Subir reporte de cobertura
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3  # Actualizado a v3
       with:
         name: coverage-report
         path: coverage/
