--- a/package.json
+++ b/package.json
@@ -4,33 +4,21 @@
     "description": "Aplicación demo para comparación de herramientas de gestión de pruebas",
     "main": "src/index.js",
     "scripts": {
-      "start": "node src/index.js",
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:coverage": "jest --coverage",
-      "lint": "eslint src/**/*.js"
+        "start": "node src/index.js",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "lint": "eslint src/**/*.js tests/**/*.js"
     },
     "dependencies": {
-      "express": "^4.17.1"
+        "express": "^4.17.1"
     },
     "devDependencies": {
-      "@types/jest": "^27.0.0",
-      "eslint": "^8.0.0",
-      "jest": "^27.0.0",
-      "supertest": "^6.1.3"
-    },
-    "jest": {
-      "collectCoverageFrom": [
-        "src/**/*.js",
-        "!src/index.js"
-      ],
-      "coverageThreshold": {
-        "global": {
-          "branches": 80,
-          "functions": 80,
-          "lines": 80,
-          "statements": 80
-        }
-      }
+        "@types/jest": "^27.0.0",
+        "eslint": "^8.57.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.31.0",
+        "jest": "^27.0.0",
+        "supertest": "^6.1.3"
     }
-  }
+}
