--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,24 @@ jobs:
     - name: Instalar dependencias
       run: npm ci
 
-    - name: Ejecutar pruebas
-      run: npm test
+    - name: Ejecutar pruebas y generar cobertura
+      run: npm test -- --coverage --coverageReporters="json-summary" --coverageDirectory=coverage
 
-    - name: Generar reporte de cobertura
-      run: npm run test:coverage
+    - name: Mostrar resumen de cobertura
+      run: |
+        echo "Resumen de Cobertura:"
+        cat coverage/coverage-summary.json
+
+    - name: Comprobar umbral de cobertura
+      run: |
+        COVERAGE=$(cat coverage/coverage-summary.json | node -p "JSON.parse(require('fs').readFileSync(0)).total.lines.pct")
+        echo "Cobertura total de líneas: $COVERAGE%"
+        if (( $(echo "$COVERAGE < 80" | bc -l) )); then
+          echo "Error: La cobertura ($COVERAGE%) está por debajo del 80% requerido"
+          exit 1
+        else
+          echo "✓ La cobertura cumple con el mínimo requerido"
+        fi
 
     - name: Subir reporte de cobertura
       uses: actions/upload-artifact@v3
@@ -38,11 +51,3 @@ jobs:
         name: coverage-report
         path: coverage/
         retention-days: 7
-
-    - name: Comprobar umbral de cobertura
-      run: |
-        COVERAGE=$(node -p "require('./coverage/coverage-summary.json').total.lines.pct")
-        if (( $(echo "$COVERAGE < 80" | bc -l) )); then
-          echo "La cobertura ($COVERAGE%) está por debajo del 80% requerido"
-          exit 1
-        fi
